run api with docker

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,84 @@
+# ============================================
 # MongoDB Configuration
-MONGO_ROOT_USERNAME=blog_admin
-MONGO_ROOT_PASSWORD=blog_db_pass
+# ============================================
+MONGO_ROOT_USERNAME=admin
+MONGO_ROOT_PASSWORD=password
 MONGODB_DB_NAME=blog
 MONGODB_DB_PORT=27017
+# For local development (without Docker), use:
+# MONGODB_URL=mongodb://admin:password@localhost:27017/blog?authSource=admin
+# For Docker Compose, MONGODB_URL is auto-generated
 
-# FastAPI Configuration
+# ============================================
+# Redis Configuration
+# ============================================
+REDIS_HOST=localhost
+# For Docker Compose, REDIS_HOST is automatically set to 'redis'
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=
+
+# ============================================
+# Application Configuration
+# ============================================
+API_V1_PREFIX=/api/v1
 LOG_LEVEL=info
 DEBUG=false
+APP_PORT=8000
+ENVIRONMENT=development
 
-# API Configuration
-API_V1_PREFIX=/api/v1
+# ============================================
+# JWT Authentication (REQUIRED)
+# ============================================
+# IMPORTANT: Change SECRET_KEY in production!
+SECRET_KEY=your-secret-key-here-change-in-production-use-a-strong-random-key
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# ============================================
+# CORS Configuration
+# ============================================
+# Comma-separated list of allowed origins (NO spaces, NO brackets)
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8080,http://localhost:4200
+
+# ============================================
+# Public Routes (Optional)
+# ============================================
+# Comma-separated list of routes that don't require authentication
+PUBLIC_ROUTES=/api/v1/auth/login,/api/v1/auth/register,/health,/
+
+# ============================================
+# Cloudinary Configuration (REQUIRED for file uploads)
+# ============================================
+CLOUDINARY_CLOUD_NAME=your-cloudinary-cloud-name
+CLOUDINARY_API_KEY=your-cloudinary-api-key
+CLOUDINARY_API_SECRET=your-cloudinary-api-secret
+CLOUDINARY_CLOUD_FOLDER=blog
+
+# ============================================
+# File Upload Configuration
+# ============================================
+# Comma-separated list of allowed MIME types
+ALLOWED_MIME_TYPES_STR=image/jpeg,image/png,image/gif,image/webp
+
+# ============================================
+# Default User (for development seeding)
+# ============================================
+# This user is created automatically if ENABLE_SEED_DATA=true
+DEFAULT_USER_EMAIL=admin@example.com
+DEFAULT_USER_PASSWORD=admin123
+DEFAULT_USER_FULL_NAME=Admin User
+DEFAULT_USER_ROLE=admin
+DEFAULT_USER_DATE_OF_BIRTH=1990-01-01
+ENABLE_SEED_DATA=true
+
+# ============================================
+# Rate Limiting
+# ============================================
+ENABLE_RATE_LIMITING=true
+
+# ============================================
+# Security Settings
+# ============================================
+MAX_FAILED_LOGIN_ATTEMPTS=5
+ACCOUNT_LOCKOUT_DURATION_MINUTES=15
